--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,3 +1,7 @@
 <h1><%= @article.title %></h1>
 <p><%= @article.body %></p>
+<p>
+    <%= link_to "delete", article_path(@article), method: :delete, 
+        data: {confirm: "Are you sure?"} %>
+</p>
 <%= link_to "<< Back to the articles list", articles_path %>
