--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,5 +1,6 @@
 <h1><%= @article.title %></h1>
 <p><%= @article.body %></p>
+<p><%= link_to "edit", edit_article_path(@article) %></p>
 <p>
     <%= link_to "delete", article_path(@article), method: :delete, 
         data: {confirm: "Are you sure?"} %>
