--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -5,4 +5,7 @@
     <%= link_to "delete", article_path(@article), method: :delete, 
         data: {confirm: "Are you sure?"} %>
 </p>
+<h3>Comments (<%= @article.comments.size %>)</h3>
+<%= render partial: 'comments/form' %>
+<%= render partial: 'articles/comment', collection: @article.comments %>
 <%= link_to "<< Back to the articles list", articles_path %>
