--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -13,6 +13,11 @@
         <%= f.text_area :body %>
     </p>
     <p>
+        <%= f.label :tag_list %></br>
+        <%= f.text_field :tag_list %>
+    </p>
+    <p>
         <%= f.submit %>&nbsp;<%= link_to "<< Back to the articles list", articles_path %>
     </p>
+
 <% end %>
